# amplifier-bundle-perplexity

./: .gitignore  README.md  bundle.md  pyproject.toml
agents/: research-expert.md
behaviors/: perplexity-research.yaml
context/: cost-guidance.md  research-awareness.md
docs/: RESEARCH_GUIDE.md
docs/plans/: 2026-02-28-perplexity-bundle-sync-design.md  2026-02-28-perplexity-bundle-sync-implementation.md
modules/tool-perplexity-search/: __init__.py  pyproject.toml
modules/tool-perplexity-search/amplifier_module_tool_perplexity_search/: __init__.py
recipes/: deep-research.yaml  fact-check.yaml
src/amplifier_module_tool_perplexity_search/: __init__.py
tests/: __init__.py  test_agent_body.py  test_agent_frontmatter.py  test_behavior_config.py  test_research_awareness_docs.py  test_research_guide_docs.py  test_tool.py
