[project]
name = "amplifier-bundle-perplexity"
version = "1.0.0"
description = "Deep research capabilities for Amplifier using Perplexity's Agentic Research API"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "perplexityai>=0.27.0",
    "amplifier-core @ git+https://github.com/microsoft/amplifier-core",
]

# Entry point defined in modules/tool-perplexity-search/pyproject.toml
# Root bundle package doesn't re-declare it to avoid conflicts

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["modules/tool-perplexity-search/amplifier_module_tool_perplexity_search"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.21.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
