[project]
name = "amplifier-module-tool-perplexity-search"
version = "1.0.0"
description = "Perplexity deep research tool for Amplifier"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "perplexityai>=0.27.0",
]

[project.entry-points."amplifier.modules"]
tool-perplexity-search = "amplifier_module_tool_perplexity_search:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_perplexity_search"]
